tools/docling-server/standalone-deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: docling-server
  labels:
    app: docling-server
spec:
  to:
    kind: Service
    name: docling-server
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
